# llmbattle

./: README.md
.obsidian/: workspace.json
llmbattle/Battle Mechanics/: Attributes.md  Elements.md  Statuses.md
llmbattle/Battle Mechanics/Phases/: Directed Flow.canvas
llmbattle/Battle Mechanics/Phases/Aftermath/: Module.md
llmbattle/Battle Mechanics/Phases/Calculate/: Calculate.md
llmbattle/Battle Mechanics/Phases/Decision/: Action.md  Concede.md  Decision.md  Swap.md  Wait.md
llmbattle/Servers/: Authority Server.md  Local Server.md
llmbattle/Visualization/: AI_Battlez.tscn  Interaction Flow.md  green.png.import  icon.svg.import  project.godot
llmbattle/Visualization/Data/: game_state.json  game_state_0.json  game_state_1.json  game_state_1.json.bak  game_state_2.json  game_state_2.json.bak
llmbattle/Visualization/Resources/: creature_data.gd
llmbattle/Visualization/Scenes/: Creature.tscn
llmbattle/Visualization/Scripts/: Creature.gd  Main.gd
server/: Cargo.toml  README.md
server/database/: available.json  schema.sql
server/examples/: creature.json
server/src/: db.rs  embedding.rs  handlers.rs  main.rs  models.rs
server/src/models/: ability.rs  creature.rs  game.rs  mod.rs  player.rs  room.rs
