[package]
name = "battllm_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.39"
dotenv = "0.15.0"
fern = "0.7.1"
log = "0.4.22"
rusqlite = "0.32.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.11.1", features = ["v4"] }
